fix spacing for mobile devices and add colored shapes behind img for larger devices

--- a/styles.css
+++ b/styles.css
@@ -41,10 +41,9 @@ html {
   /* --light: #d5a795; */
   /* --light: #cf5138; */
 
-
   /* --light: #ed774e; */
-  --light: #e65022;
-  --light: #DE7E5D;
+  /* --light: #e65022; */
+  /* --light: #DE7E5D; */
   --light: #d4563d;
   /* --kaki: #a5a880;
     --dark-kaki: #707354;
