--- a/styles/hero.css
+++ b/styles/hero.css
@@ -10,16 +10,7 @@
     border-radius: 8px 8px 0 0;
 }
 
-/* .hero_section .overlay {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    background-color: rgba(0,0,0,0.1);
-    z-index: 10;
-    color: white;
-} */
-
-.test {
+.colored-shape {
     position: absolute;
     width: 300px;
     height: 300px;
@@ -133,17 +124,22 @@ h1 span {
 }
 
 @media screen and (max-width: 768px) {
+    .hero_section {
+        margin-bottom: 0;
+    }
+
     .hero_section .content {
         gap: 0;
+        margin: 4rem auto 0 auto !important;
+        justify-content: normal;
     }
 
     .hero_section .content > div {
         flex-direction: column;
-        margin-top: 0;
     }
 
     .hero_section .content .top {
-        gap: 0;
+        gap: 2rem !important;
     }
 
     .hero_section .intro {
@@ -161,7 +157,7 @@ h1 span {
     }
 
     .hero_section .content .socials {
-        margin-top: 6rem;
+        margin-top: 2rem;
     }
 
     .contact-btn {
@@ -176,7 +172,7 @@ h1 span {
         display: none;
     }
 
-    .test {
+    .colored-shape {
         display: none;
     }
 }
